--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Add a copyright file<!DOCTYPE html>
 <head>
 	<title>Example Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
