--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 Want to Add a copyright file
 new copy right<!DOCTYPE html>
 <head>
-	<title>Example Title</title>
+	<title>Greate Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,7 +15,7 @@ new copy right<!DOCTYPE html>
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+				Some interesting stuff goes here
 		</p>
 	</main>
 	<footer class="container">
