Adding confling changes(o purpos)

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 Want to Add a copyright file
 new copy right<!DOCTYPE html>
 <head>
-	<title>Example Title</title>
+	<title>very respectfull website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,11 +15,11 @@ new copy right<!DOCTYPE html>
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+		I am not sure what will go here	
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; one Company 2014</p>
 	</footer>
 </body>
 </html>
