before base conflits

--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,6 @@
 Want to Add a copyright file
 new copy right<!DOCTYPE html>
+Adding line
 <head>
 	<title>very respectfull website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
