--- a/simple.html
+++ b/simple.html
@@ -21,7 +21,7 @@ Adding line
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; one Company 2014</p>
+		<p>&copy; 2014 Git.Training one Company 2014</p>
 	</footer>
 </body>
 </html>
