Done with simple.html update

--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@ Want to Add a copyright file
 new copy right<!DOCTYPE html>
 Adding line
 <head>
-	<title>very respectfull website</title>
+	<title>understnading stash very respectfull website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@ Adding line
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-		I am not sure what will go here	
+		making additional stash.  I am not sure what will go here	
 		</p>
 	</main>
 	<footer class="container">
