changes after git changes

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 Want to Add a copyright file
 new copy right<!DOCTYPE html>
 Adding line
+add some
 <head>
 	<title>understnading stash very respectfull website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
