--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Adding stash<!DOCTYPE html>
             }
         </style>
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="Editing for tagging purpose stylesheet" href="css/main.css">
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
