updating for tag 1.2

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@ new copy right<!DOCTYPE html>
 Adding line
 add some
 <head>
-	<title>understnading stash very respectfull website</title>
+	<title>uTagging compare website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
